# CocoonAcademy

./: CMakeLists.txt  README.md  main.cpp
Models/: TiposEscuelas.h  TiposJornadas.h
Models/Academy/: Academy.cpp  Academy.h
Models/AcademyBase/: AcademyBase.h
Models/Alumno/: Alumno.cpp  Alumno.h
Models/Asignatura/: Asignatura.cpp  Asignatura.h
Models/Curso/: Curso.cpp  Curso.h
Models/Evaluacion/: Evaluacion.cpp  Evaluacion.h
Testers/: executeTesting.h
Testers/Models/: AcademyModelTester.h  AlumnoTester.h  AsignaturaTester.h  CursoTester.h  EvaluacionTester.h
Testers/Utils/: FloatRandomGeneratorTester.h
Utilities/RandomFloatGenerator/: RandomFloatGenerator.cpp  RandomFloatGenerator.h
